src/objects/STP__c.object
<CustomObject>
    <description>Company Questionnaire</description>
    <fields>
        <fullName>Additional_Services_or_Assistance_Requir__c</fullName>
        <inlineHelpText>Additional Services or Assistance Required:</inlineHelpText>
        <label>Add&apos;l services/assistance required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>STPS (Alternate Contact)</relationshipLabel>
        <relationshipName>STPS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Dates__c</fullName>
        <inlineHelpText>Alternative Dates:</inlineHelpText>
        <label>Alternative Dates:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>And_in_the_target_market__c</fullName>
        <inlineHelpText>And in the target market?</inlineHelpText>
        <label>And in the target market?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Exports_as_Total_Sales__c</fullName>
        <label>Annual Exports (as % Total Sales)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 25%</fullName>
                </value>
                <value>
                    <fullName>More than 25%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_No_Years_Exporting__c</fullName>
        <label>Approximate No. Years Exporting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1 years</fullName>
                </value>
                <value>
                    <fullName>1 - 2 years</fullName>
                </value>
                <value>
                    <fullName>3 - 4 years</fullName>
                </value>
                <value>
                    <fullName>&gt;5 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_any_international_licensing_or__c</fullName>
        <inlineHelpText>Are there any international licensing or registration requirements pending?</inlineHelpText>
        <label>Are there any international licensing or</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_there_any_pending__c</fullName>
        <inlineHelpText>Are there any pending?</inlineHelpText>
        <label>Are there any pending?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Average_Annual_Sales__c</fullName>
        <label>Average Annual Sales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $5M</fullName>
                </value>
                <value>
                    <fullName>$5-$10M</fullName>
                </value>
                <value>
                    <fullName>More than $10M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_time_to_complete_a_sale__c</fullName>
        <inlineHelpText>From the time you (or your distributor) first meet a new end-user, on average, how long does it take to complete a sale?</inlineHelpText>
        <label>Average time to complete a sale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>&gt;2 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_time_to_sign_new_dist_partner__c</fullName>
        <inlineHelpText>From the time you first meet a new marketing partner (distributor, agent, dealer, etc.), on average, how long does it take to sign a partner (distributor, agent, dealer, etc.) agreement?</inlineHelpText>
        <label>Average time to sign new dist./partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>&gt;2 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brief_Company_Description__c</fullName>
        <label>Brief Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Objective_s__c</fullName>
        <inlineHelpText>Company Business Objective</inlineHelpText>
        <label>Business Objective(s)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_has_rights_to_export_product__c</fullName>
        <inlineHelpText>Does your company produce or have rights to export the product/service?</inlineHelpText>
        <label>Client has rights to export product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Activities__c</fullName>
        <label>Company Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor/Representative</fullName>
                </value>
                <value>
                    <fullName>Educational Institution</fullName>
                </value>
                <value>
                    <fullName>Export Management Company</fullName>
                </value>
                <value>
                    <fullName>Franchiser</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Service Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_already_represented_in_market__c</fullName>
        <inlineHelpText>Is your company currently represented in this country/region?</inlineHelpText>
        <label>Company already represented in market?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countries_Exporting_To_past_present__c</fullName>
        <inlineHelpText>Countries Exporting To (past and present):</inlineHelpText>
        <label>Countries Exporting To (past/present)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_ies_of_Interest__c</fullName>
        <label>Country(ies) of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_rep_dist_aware_of_new_search__c</fullName>
        <label>Current rep./dist. aware of new search?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_working_with_a_USEAC__c</fullName>
        <inlineHelpText>Are you currently working with a local U.S. Commercial Service Field Office?</inlineHelpText>
        <label>Currently working with a USEAC?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Dates_for_Service__c</fullName>
        <inlineHelpText>Desired Dates for Service:</inlineHelpText>
        <label>Desired Dates for Service:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Location_s__c</fullName>
        <label>Desired Location(s):</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_qualities_of_target_partners__c</fullName>
        <inlineHelpText>Describe any preferences, technical qualifications, servicing capabilities, requirements, or pre- qualifications that ideal prospects must have (i.e. size, geographic territory, investment, etc</inlineHelpText>
        <label>Desired qualities of target partners</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domestic_and_international_trade_shows__c</fullName>
        <inlineHelpText>What are the domestic and international trade shows for your industry/company?</inlineHelpText>
        <label>Domestic and international trade shows</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Export_Control_Classification_Number__c</fullName>
        <inlineHelpText>Please list the Export Control Classification Number (ECCN)</inlineHelpText>
        <label>Export Control Classification Nr.(ECCN)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hyperlinks_for_marketing_materials__c</fullName>
        <inlineHelpText>Please list here any hyperlinks for marketing materials (links to online .pdf brochures, online videos, etc.). If you prefer, please email any materials to your local contact along with this form.|Text Area (rich) 50,000 – Upload?</inlineHelpText>
        <label>Hyperlinks for marketing materials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_USEAC_location__c</fullName>
        <label>If yes, USEAC location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium,</fullName>
                </value>
                <value>
                    <fullName>Hamburg,</fullName>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_is_this_arrangement_exclusive__c</fullName>
        <inlineHelpText>If yes, is this arrangement exclusive?</inlineHelpText>
        <label>If yes, is this arrangement exclusive?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_please_provide_the_following_City__c</fullName>
        <inlineHelpText>If yes, please provide the following:| |City:|</inlineHelpText>
        <label>If yes,please provide the following:City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_using_more_than_one_dist_now__c</fullName>
        <inlineHelpText>If yes, your company use more than one distributor/reseller/wholesaler/agent in a country?</inlineHelpText>
        <label>If yes, using more than one dist. now?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_l_licenses_registrations_pending__c</fullName>
        <label>Int&apos;l licenses/registrations pending</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Major_competitors_in_the_target_markets__c</fullName>
        <inlineHelpText>Who are your major competitors in the target market(s)?</inlineHelpText>
        <label>Major competitors in target market(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>More_than_one_distributor_ok__c</fullName>
        <inlineHelpText>Can your company use more than one distributor/re-seller/wholesaler/agent in a country?</inlineHelpText>
        <label>More than one distributor ok?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objectives_interests_in_target_market__c</fullName>
        <inlineHelpText>Describe your company&apos;s interests and objectives in the target market or any special features of your company’s operations that can help us identify potential business partners.</inlineHelpText>
        <label>Objectives/interests in target market</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>STPS</relationshipLabel>
        <relationshipName>STPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_business_contact_please_specify__c</fullName>
        <inlineHelpText>Other business contact (please specify)</inlineHelpText>
        <label>Other business contact (please specify)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_please_specify__c</fullName>
        <label>Other Company Activities(please specify)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Please_certify_your_company_size__c</fullName>
        <label>Please certify your company size:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Please_list_the_Schedule_B_HS_Code__c</fullName>
        <inlineHelpText>Please list the Schedule B/HS Code (and corresponding product description)</inlineHelpText>
        <label>Please list the Schedule B/HS Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>STPS</relationshipLabel>
        <relationshipName>STPS</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_NAICs_Code__c</fullName>
        <label>Primary NAICs Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_license_or_registration_in_US__c</fullName>
        <inlineHelpText>What type of licensing or registration does your product/service require in the U.S. (i.e. FDA Approval)? Which requirements do you carry?</inlineHelpText>
        <label>Product license or registration in U.S</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_s_competitive_advantages__c</fullName>
        <label>Product&apos;s competitive advantages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifies_as_US_exporter__c</fullName>
        <inlineHelpText>Are you a U.S. exporter and is your product/service of U.S. origin or contain at least 51% U.S. content?</inlineHelpText>
        <label>Qualifies as U.S. exporter?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questionnaire_Number__c</fullName>
        <description>Questionnaire Number</description>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Questionnaire Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Related_products_handled_by_distributor__c</fullName>
        <inlineHelpText>What related products might a representative/partner of this product/service also handle</inlineHelpText>
        <label>Related products handled by distributor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seeking_exclusive_representation__c</fullName>
        <inlineHelpText>Is your firm seeking representation on an exclusive basis in this market?</inlineHelpText>
        <label>Seeking exclusive representation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specific_firms_persons_not_to_contact__c</fullName>
        <inlineHelpText>Are they any specific companies, or types of companies, you would like us NOT to contact</inlineHelpText>
        <label>Specific firms/persons NOT to contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_firms_persons_to_contact__c</fullName>
        <inlineHelpText>Are there any specific companies, or types of companies, you would like us to contact? If so, please list them here.</inlineHelpText>
        <label>Specific firms/persons to contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Specialist_name__c</fullName>
        <inlineHelpText>Trade Specialist (name):</inlineHelpText>
        <label>Trade Specialist (name):</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_business_contacts_saught__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>What type of business contacts are you seeking?</inlineHelpText>
        <label>Type of business contacts saught</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Typical_dist_marketing_outside_us__c</fullName>
        <inlineHelpText>(If applicable) How is your product typically distributed and marketed outside of the U.S.</inlineHelpText>
        <label>Typical dist./marketing outside US</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Product_license_registrations_pending__c</fullName>
        <label>US Product license/registrations pending</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Using_can_use_more_than_one_distributor__c</fullName>
        <label>Using/can use more than one distributor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Which_international_licensing_or_registr__c</fullName>
        <inlineHelpText>Which international licensing or registration requirements do you carry?</inlineHelpText>
        <label>Which international licensing or registr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_shows_do_you_exhibit_at__c</fullName>
        <inlineHelpText>Please indicate which shows do you exhibit at and/or walk?</inlineHelpText>
        <label>which shows do you exhibit at?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_are_your_major_competitors_at_home__c</fullName>
        <inlineHelpText>Who are your major competitors at home?</inlineHelpText>
        <label>Who are your major competitors at home?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>most_important_end_users__c</fullName>
        <inlineHelpText>Please list the most important end-users or end-user industries for this product/service</inlineHelpText>
        <label>Most important end-users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>product_license_registration_outside_US__c</fullName>
        <inlineHelpText>What type of licensing or registration does your product/service require internationally (CE Mark, WEE, RoHS, CCC, GOST-R, FDA Classification, ASME, etc.)? Which requirements do you carry?</inlineHelpText>
        <label>Product license/registration outside US</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>product_service_s_description__c</fullName>
        <inlineHelpText>Describe the product/service(s) to be promoted. Include the competitive advantages and unique selling proposition.</inlineHelpText>
        <label>product/service(s) description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sub_sectors_served__c</fullName>
        <inlineHelpText>Does your product/service serve a particular group of sub-sectors (i.e., industrial vs. commercial vs. residential for the building sector; oncology, ENT, orthopedic, etc. for the medical sector; coal, nuclear, gas, oil, etc. for the energy sector)?</inlineHelpText>
        <label>Sub-sectors served</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sub_sectors_served_prioritized__c</fullName>
        <inlineHelpText>Please prioritize those sub-sectors that you want us to pursue.</inlineHelpText>
        <label>Sub-sectors served prioritized</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>typically_distribution_marketing_in_US__c</fullName>
        <inlineHelpText>How is your product typically distributed and marketed in the U.S.</inlineHelpText>
        <label>Typically distribution/marketing in US</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>STP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>STP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>